# sb-spark-transform-service

./: Makefile  README.md  pyproject.toml  tox.ini
configs/: .env.example  connection.yaml  pipeline.yaml
docs/: DEVELOPER_GUIDE.md  PERFORMANCE_GUIDE.md
examples/: connection.yaml  pipeline.yaml
examples/sql/: 01_load_customers.sql  02_load_orders.sql  03_join_customers_orders.sql
scripts/: run_enhanced.sh  run_local.sh
sql/: 01_load_customers.sql  02_load_orders.sql  03_load_products.sql  04_clean_customers.sql  05_clean_orders.sql  06_customer_metrics.sql  07_product_metrics.sql  08_final_report.sql
tests/: conftest.py  test_cli_and_config.py  test_connectors.py  test_performance.py  test_pipeline_execute.py  test_pipeline_order.py  test_placeholders_and_write.py  test_status.py  test_steps.py
transform_service/: __init__.py  cli.py  config.py  connectors.py  logging_utils.py  performance.py  pipeline.py  schemas.py  status.py  steps.py
transform_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
